--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="src\Common\System\AutoReleasePool.cpp" />
     <ClCompile Include="src\Common\System\Cache\GLProgramCache.cpp" />
     <ClCompile Include="src\Common\System\ECSManager.cpp" />
+    <ClCompile Include="src\Common\Tools\FileUtils.cpp" />
     <ClCompile Include="src\Common\Tools\Utils.cpp" />
     <ClCompile Include="src\GL\GLDefine.cpp" />
     <ClCompile Include="src\GL\GLProgram.cpp" />
@@ -65,6 +66,7 @@
     <ClInclude Include="src\Common\System\Cache\GLProgramCache.h" />
     <ClInclude Include="src\Common\System\ECSManager.h" />
     <ClInclude Include="src\Common\Tools\BaseSingleton.h" />
+    <ClInclude Include="src\Common\Tools\FileUtils.h" />
     <ClInclude Include="src\Common\Tools\Utils.h" />
     <ClInclude Include="src\GL\GLDefine.h" />
     <ClInclude Include="src\GL\GLProgram.h" />
