--- a/ShaderBrowser/ShaderBrowser.vcxproj.filters
+++ b/ShaderBrowser/ShaderBrowser.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="src\Browser\Components\Event">
       <UniqueIdentifier>{bab64273-31a4-47c1-b247-2efe3a0c9d37}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Browser\Components\Camera">
+      <UniqueIdentifier>{b4f4b9b8-4e60-4bab-8586-b9894b9d41d7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -134,6 +137,12 @@
     </ClCompile>
     <ClCompile Include="src\Common\System\Cache\TextureCache.cpp">
       <Filter>src\Common\System\Cache</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Browser\Components\Camera\Camera.cpp">
+      <Filter>src\Browser\Components\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Browser\System\CameraSystem.cpp">
+      <Filter>src\Browser\System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -223,6 +232,12 @@
     </ClInclude>
     <ClInclude Include="src\Common\System\Cache\BaseAsyncLoader.h">
       <Filter>src\Common\System\Cache</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Browser\Components\Camera\Camera.h">
+      <Filter>src\Browser\Components\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Browser\System\CameraSystem.h">
+      <Filter>src\Browser\System</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
