--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -20,8 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Browser\Components\BaseComponent.cpp" />
+    <ClCompile Include="src\Browser\Components\BoundBox\AABBBoundBox.cpp" />
+    <ClCompile Include="src\Browser\Components\BoundBox\BaseBoundBox.cpp" />
     <ClCompile Include="src\Browser\Components\Camera\Camera.cpp" />
     <ClCompile Include="src\Browser\Components\Event\ComponentEvent.cpp" />
+    <ClCompile Include="src\Browser\Components\Light\BaseLight.cpp" />
+    <ClCompile Include="src\Browser\Components\Light\DirectionalLight.cpp" />
+    <ClCompile Include="src\Browser\Components\Light\PointLight.cpp" />
+    <ClCompile Include="src\Browser\Components\Light\SpotLight.cpp" />
     <ClCompile Include="src\Browser\Components\Mesh\Mesh.cpp" />
     <ClCompile Include="src\Browser\Components\Mesh\MeshFilter.cpp" />
     <ClCompile Include="src\Browser\Components\Render\BaseRender.cpp" />
@@ -29,20 +35,25 @@
     <ClCompile Include="src\Browser\Components\Render\Pass.cpp" />
     <ClCompile Include="src\Browser\Components\Transform\Transform.cpp" />
     <ClCompile Include="src\Browser\Entitys\BaseEntity.cpp" />
+    <ClCompile Include="src\Browser\System\BoundBoxSystem.cpp" />
     <ClCompile Include="src\Browser\System\CameraSystem.cpp" />
+    <ClCompile Include="src\Browser\System\LightSystem.cpp" />
     <ClCompile Include="src\Browser\System\MeshSystem.cpp" />
     <ClCompile Include="src\Browser\System\RenderSystem.cpp" />
     <ClCompile Include="src\Browser\System\TransformSystem.cpp" />
     <ClCompile Include="src\Common\Components\Reference.cpp" />
     <ClCompile Include="src\Common\System\AutoReleasePool.cpp" />
     <ClCompile Include="src\Common\System\Cache\GLProgramCache.cpp" />
+    <ClCompile Include="src\Common\System\Cache\ModelCache.cpp" />
     <ClCompile Include="src\Common\System\Cache\TextureCache.cpp" />
     <ClCompile Include="src\Common\System\ECSManager.cpp" />
     <ClCompile Include="src\Common\Tools\FileUtils.cpp" />
     <ClCompile Include="src\Common\Tools\Utils.cpp" />
     <ClCompile Include="src\GL\GLDefine.cpp" />
     <ClCompile Include="src\GL\GLProgram.cpp" />
+    <ClCompile Include="src\GL\GLStateCache.cpp" />
     <ClCompile Include="src\GL\Image.cpp" />
+    <ClCompile Include="src\GL\Model.cpp" />
     <ClCompile Include="src\GL\Texture2D.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Plugins\glad\src\glad.c" />
@@ -50,8 +61,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Browser\Components\BaseComponent.h" />
+    <ClInclude Include="src\Browser\Components\BoundBox\AABBBoundBox.h" />
+    <ClInclude Include="src\Browser\Components\BoundBox\BaseBoundBox.h" />
     <ClInclude Include="src\Browser\Components\Camera\Camera.h" />
     <ClInclude Include="src\Browser\Components\Event\ComponentEvent.h" />
+    <ClInclude Include="src\Browser\Components\Light\BaseLight.h" />
+    <ClInclude Include="src\Browser\Components\Light\DirectionalLight.h" />
+    <ClInclude Include="src\Browser\Components\Light\PointLight.h" />
+    <ClInclude Include="src\Browser\Components\Light\SpotLight.h" />
     <ClInclude Include="src\Browser\Components\Mesh\Mesh.h" />
     <ClInclude Include="src\Browser\Components\Mesh\MeshFilter.h" />
     <ClInclude Include="src\Browser\Components\Render\BaseRender.h" />
@@ -59,7 +76,9 @@
     <ClInclude Include="src\Browser\Components\Render\Pass.h" />
     <ClInclude Include="src\Browser\Components\Transform\Transform.h" />
     <ClInclude Include="src\Browser\Entitys\BaseEntity.h" />
+    <ClInclude Include="src\Browser\System\BoundBoxSystem.h" />
     <ClInclude Include="src\Browser\System\CameraSystem.h" />
+    <ClInclude Include="src\Browser\System\LightSystem.h" />
     <ClInclude Include="src\Browser\System\MeshSystem.h" />
     <ClInclude Include="src\Browser\System\RenderSystem.h" />
     <ClInclude Include="src\Browser\System\TransformSystem.h" />
@@ -70,6 +89,7 @@
     <ClInclude Include="src\Common\System\Cache\BaseAsyncLoader.h" />
     <ClInclude Include="src\Common\System\Cache\BaseCache.h" />
     <ClInclude Include="src\Common\System\Cache\GLProgramCache.h" />
+    <ClInclude Include="src\Common\System\Cache\ModelCache.h" />
     <ClInclude Include="src\Common\System\Cache\TextureCache.h" />
     <ClInclude Include="src\Common\System\ECSManager.h" />
     <ClInclude Include="src\Common\Tools\BaseSingleton.h" />
@@ -77,7 +97,9 @@
     <ClInclude Include="src\Common\Tools\Utils.h" />
     <ClInclude Include="src\GL\GLDefine.h" />
     <ClInclude Include="src\GL\GLProgram.h" />
+    <ClInclude Include="src\GL\GLStateCache.h" />
     <ClInclude Include="src\GL\Image.h" />
+    <ClInclude Include="src\GL\Model.h" />
     <ClInclude Include="src\GL\Texture2D.h" />
     <ClInclude Include="src\Plugins\Image\stb_image.h" />
   </ItemGroup>
