--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -157,14 +157,18 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)\ShaderBrowser\src;$(SolutionDir)\ShaderBrowser\src\Plugins\GLFW\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glm\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glad\include;$(SolutionDir)\ShaderBrowser\src\Plugins\assimp\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ShaderBrowser\src\Plugins\GLFW\lib\win32;$(SolutionDir)ShaderBrowser\src\Plugins\assimp\lib\win32;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)ShaderBrowser\src\Plugins\GLFW\lib\win32\Debug;$(SolutionDir)ShaderBrowser\src\Plugins\assimp\lib\win32;$(LibraryPath)</LibraryPath>
     <LibraryWPath>$(LibraryWPath)</LibraryWPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(SolutionDir)\ShaderBrowser\src;$(SolutionDir)\ShaderBrowser\src\Plugins\GLFW\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glm\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glad\include;$(SolutionDir)\ShaderBrowser\src\Plugins\assimp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ShaderBrowser\src\Plugins\GLFW\lib\win32\Debug;$(SolutionDir)ShaderBrowser\src\Plugins\assimp\lib\win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)\ShaderBrowser\src;$(SolutionDir)\ShaderBrowser\src\Plugins\GLFW\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glm\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glad\include;$(SolutionDir)\ShaderBrowser\src\Plugins\assimp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ShaderBrowser\src\Plugins\GLFW\lib\win32\Release;$(SolutionDir)ShaderBrowser\src\Plugins\assimp\lib\win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -193,10 +197,14 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>
+ %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -209,12 +217,15 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
