--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -48,6 +48,11 @@
     <ClCompile Include="src\Common\System\Cache\TextureCache.cpp" />
     <ClCompile Include="src\Common\System\ECSManager.cpp" />
     <ClCompile Include="src\Common\Tools\FileUtils.cpp" />
+    <ClCompile Include="src\Common\Tools\UI\BaseGUIPanel.cpp" />
+    <ClCompile Include="src\Common\Tools\UI\GameStatusPanel.cpp" />
+    <ClCompile Include="src\Common\Tools\UI\GUIFramework.cpp" />
+    <ClCompile Include="src\Common\Tools\UI\HierarchyPanel.cpp" />
+    <ClCompile Include="src\Common\Tools\UI\InspectorPanel.cpp" />
     <ClCompile Include="src\Common\Tools\Utils.cpp" />
     <ClCompile Include="src\GL\GLDefine.cpp" />
     <ClCompile Include="src\GL\GLProgram.cpp" />
@@ -57,7 +62,9 @@
     <ClCompile Include="src\GL\Texture2D.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Plugins\glad\src\glad.c" />
-    <ClCompile Include="src\Plugins\Image\stb_image.cpp" />
+    <ClCompile Include="src\Plugins\imgui\imgui.cpp" />
+    <ClCompile Include="src\Plugins\imgui\imgui_draw.cpp" />
+    <ClCompile Include="src\Plugins\imgui\imgui_impl_glfw_gl3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Browser\Components\BaseComponent.h" />
@@ -94,6 +101,11 @@
     <ClInclude Include="src\Common\System\ECSManager.h" />
     <ClInclude Include="src\Common\Tools\BaseSingleton.h" />
     <ClInclude Include="src\Common\Tools\FileUtils.h" />
+    <ClInclude Include="src\Common\Tools\UI\BaseGUIPanel.h" />
+    <ClInclude Include="src\Common\Tools\UI\GameStatusPanel.h" />
+    <ClInclude Include="src\Common\Tools\UI\GUIFramework.h" />
+    <ClInclude Include="src\Common\Tools\UI\HierarchyPanel.h" />
+    <ClInclude Include="src\Common\Tools\UI\InspectorPanel.h" />
     <ClInclude Include="src\Common\Tools\Utils.h" />
     <ClInclude Include="src\GL\GLDefine.h" />
     <ClInclude Include="src\GL\GLProgram.h" />
@@ -101,7 +113,6 @@
     <ClInclude Include="src\GL\Image.h" />
     <ClInclude Include="src\GL\Model.h" />
     <ClInclude Include="src\GL\Texture2D.h" />
-    <ClInclude Include="src\Plugins\Image\stb_image.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E77D317D-60E5-4CB6-9ED6-61AE661DD35A}</ProjectGuid>
@@ -156,7 +167,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\ShaderBrowser\src;$(SolutionDir)\ShaderBrowser\src\Plugins\GLFW\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glm\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glad\include;$(SolutionDir)\ShaderBrowser\src\Plugins\assimp\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\ShaderBrowser\src;$(SolutionDir)\ShaderBrowser\src\Plugins\GLFW\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glm\include;$(SolutionDir)\ShaderBrowser\src\Plugins\glad\include;$(SolutionDir)\ShaderBrowser\src\Plugins\assimp\include;$(SolutionDir)ShaderBrowser\src\Plugins\imgui;$(SolutionDir)ShaderBrowser\src\Plugins\stb;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)ShaderBrowser\src\Plugins\GLFW\lib\win32\Debug;$(SolutionDir)ShaderBrowser\src\Plugins\assimp\lib\win32;$(LibraryPath)</LibraryPath>
     <LibraryWPath>$(LibraryWPath)</LibraryWPath>
   </PropertyGroup>
