--- a/ShaderBrowser/ShaderBrowser.vcxproj.filters
+++ b/ShaderBrowser/ShaderBrowser.vcxproj.filters
@@ -219,6 +219,9 @@
     <ClCompile Include="src\Browser\System\AnimationSystem.cpp">
       <Filter>src\Browser\System</Filter>
     </ClCompile>
+    <ClCompile Include="src\Browser\Components\Render\SkinnedMeshRenderer.cpp">
+      <Filter>src\Browser\Components\Render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GL\GLProgram.h">
@@ -370,6 +373,9 @@
     </ClInclude>
     <ClInclude Include="src\Browser\System\AnimationSystem.h">
       <Filter>src\Browser\System</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Browser\Components\Render\SkinnedMeshRenderer.h">
+      <Filter>src\Browser\Components\Render</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
