--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="src\Common\Components\Reference.cpp" />
     <ClCompile Include="src\Common\System\AutoReleasePool.cpp" />
     <ClCompile Include="src\Common\System\Cache\GLProgramCache.cpp" />
+    <ClCompile Include="src\Common\System\Cache\MaterialCache.cpp" />
     <ClCompile Include="src\Common\System\Cache\ModelCache.cpp" />
     <ClCompile Include="src\Common\System\Cache\TextureCache.cpp" />
     <ClCompile Include="src\Common\System\ECSManager.cpp" />
@@ -102,6 +103,7 @@
     <ClInclude Include="src\Common\System\Cache\BaseAsyncLoader.h" />
     <ClInclude Include="src\Common\System\Cache\BaseCache.h" />
     <ClInclude Include="src\Common\System\Cache\GLProgramCache.h" />
+    <ClInclude Include="src\Common\System\Cache\MaterialCache.h" />
     <ClInclude Include="src\Common\System\Cache\ModelCache.h" />
     <ClInclude Include="src\Common\System\Cache\TextureCache.h" />
     <ClInclude Include="src\Common\System\ECSManager.h" />
