修改渲染系统结构
修改渲染系统结构

--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -32,6 +32,8 @@
     <ClCompile Include="src\Browser\Components\Mesh\Mesh.cpp" />
     <ClCompile Include="src\Browser\Components\Mesh\MeshFilter.cpp" />
     <ClCompile Include="src\Browser\Components\Render\BaseRender.cpp" />
+    <ClCompile Include="src\Browser\Components\Render\Commands\BaseRenderCommand.cpp" />
+    <ClCompile Include="src\Browser\Components\Render\Commands\SkinnedRenderCommand.cpp" />
     <ClCompile Include="src\Browser\Components\Render\Material.cpp" />
     <ClCompile Include="src\Browser\Components\Render\Pass.cpp" />
     <ClCompile Include="src\Browser\Components\Render\SkinnedMeshRenderer.cpp" />
@@ -84,6 +86,8 @@
     <ClInclude Include="src\Browser\Components\Mesh\Mesh.h" />
     <ClInclude Include="src\Browser\Components\Mesh\MeshFilter.h" />
     <ClInclude Include="src\Browser\Components\Render\BaseRender.h" />
+    <ClInclude Include="src\Browser\Components\Render\Commands\BaseRenderCommand.h" />
+    <ClInclude Include="src\Browser\Components\Render\Commands\SkinnedRenderCommand.h" />
     <ClInclude Include="src\Browser\Components\Render\Material.h" />
     <ClInclude Include="src\Browser\Components\Render\Pass.h" />
     <ClInclude Include="src\Browser\Components\Render\SkinnedMeshRenderer.h" />
