--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="src\Browser\Components\BoundBox\BaseBoundBox.cpp" />
     <ClCompile Include="src\Browser\Components\Camera\Camera.cpp" />
     <ClCompile Include="src\Browser\Components\Event\ComponentEvent.cpp" />
+    <ClCompile Include="src\Browser\Components\Feedback\BaseFeedback.cpp" />
     <ClCompile Include="src\Browser\Components\Light\BaseLight.cpp" />
     <ClCompile Include="src\Browser\Components\Light\DirectionalLight.cpp" />
     <ClCompile Include="src\Browser\Components\Light\PointLight.cpp" />
@@ -42,6 +43,7 @@
     <ClCompile Include="src\Browser\System\AnimationSystem.cpp" />
     <ClCompile Include="src\Browser\System\BoundBoxSystem.cpp" />
     <ClCompile Include="src\Browser\System\CameraSystem.cpp" />
+    <ClCompile Include="src\Browser\System\FeedbackSystem.cpp" />
     <ClCompile Include="src\Browser\System\LightSystem.cpp" />
     <ClCompile Include="src\Browser\System\MeshSystem.cpp" />
     <ClCompile Include="src\Browser\System\RenderSystem.cpp" />
@@ -62,6 +64,7 @@
     <ClCompile Include="src\Common\Tools\UI\InspectorPanel.cpp" />
     <ClCompile Include="src\Common\Tools\Utils.cpp" />
     <ClCompile Include="src\GL\GLDefine.cpp" />
+    <ClCompile Include="src\GL\GLFeedback.cpp" />
     <ClCompile Include="src\GL\GLProgram.cpp" />
     <ClCompile Include="src\GL\GLStateCache.cpp" />
     <ClCompile Include="src\GL\Image.cpp" />
@@ -80,6 +83,7 @@
     <ClInclude Include="src\Browser\Components\BoundBox\BaseBoundBox.h" />
     <ClInclude Include="src\Browser\Components\Camera\Camera.h" />
     <ClInclude Include="src\Browser\Components\Event\ComponentEvent.h" />
+    <ClInclude Include="src\Browser\Components\Feedback\BaseFeedback.h" />
     <ClInclude Include="src\Browser\Components\Light\BaseLight.h" />
     <ClInclude Include="src\Browser\Components\Light\DirectionalLight.h" />
     <ClInclude Include="src\Browser\Components\Light\PointLight.h" />
@@ -97,6 +101,7 @@
     <ClInclude Include="src\Browser\System\AnimationSystem.h" />
     <ClInclude Include="src\Browser\System\BoundBoxSystem.h" />
     <ClInclude Include="src\Browser\System\CameraSystem.h" />
+    <ClInclude Include="src\Browser\System\FeedbackSystem.h" />
     <ClInclude Include="src\Browser\System\LightSystem.h" />
     <ClInclude Include="src\Browser\System\MeshSystem.h" />
     <ClInclude Include="src\Browser\System\RenderSystem.h" />
@@ -123,6 +128,7 @@
     <ClInclude Include="src\Common\Tools\Utils.h" />
     <ClInclude Include="src\GL\Assimp.h" />
     <ClInclude Include="src\GL\GLDefine.h" />
+    <ClInclude Include="src\GL\GLFeedback.h" />
     <ClInclude Include="src\GL\GLProgram.h" />
     <ClInclude Include="src\GL\GLStateCache.h" />
     <ClInclude Include="src\GL\Image.h" />
