--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="src\Browser\Components\BoundBox\BaseBoundBox.cpp" />
     <ClCompile Include="src\Browser\Components\Camera\Camera.cpp" />
     <ClCompile Include="src\Browser\Components\Event\ComponentEvent.cpp" />
+    <ClCompile Include="src\Browser\Components\Feedback\AnimatorFeedback.cpp" />
     <ClCompile Include="src\Browser\Components\Feedback\BaseFeedback.cpp" />
     <ClCompile Include="src\Browser\Components\Light\BaseLight.cpp" />
     <ClCompile Include="src\Browser\Components\Light\DirectionalLight.cpp" />
@@ -83,6 +84,7 @@
     <ClInclude Include="src\Browser\Components\BoundBox\BaseBoundBox.h" />
     <ClInclude Include="src\Browser\Components\Camera\Camera.h" />
     <ClInclude Include="src\Browser\Components\Event\ComponentEvent.h" />
+    <ClInclude Include="src\Browser\Components\Feedback\AnimatorFeedback.h" />
     <ClInclude Include="src\Browser\Components\Feedback\BaseFeedback.h" />
     <ClInclude Include="src\Browser\Components\Light\BaseLight.h" />
     <ClInclude Include="src\Browser\Components\Light\DirectionalLight.h" />
